--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="wrapper">
-
+        <main>
+            
+        </main>
     </div>
+    <!-- /.wrapper -->
     <script src="https://code.jquery.com/jquery.min.js"></script>
     <script src="js/script.js"></script>
 </body>
