--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,21 @@
 <body>
     <div class="wrapper">
         <main>
-            
+            <header class="header">
+                <div class="container">
+                    <div class="header-block">
+                        <nav class="header-nav">
+                            ul.nav-list>li.nav-item
+                        </nav>
+                        <!-- /.header-menu -->
+                        <div class="header-contact"></div>
+                        <!-- /.header-contact -->
+                    </div>
+                    <!-- /.header-block -->
+                </div>
+                <!-- /.container -->
+            </header>
+            <!-- /.header -->
         </main>
     </div>
     <!-- /.wrapper -->
