--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,46 @@
             <header class="header">
                 <div class="container">
                     <div class="header-block">
-                        <nav class="header-nav">
-                            ul.nav-list>li.nav-item
+                        <nav class="header-navbar">
+                            <ul class="header-nav">
+                                <li class="header-nav__item">
+                                    <a href="#" class="header-nav__link">Главная</a>
+                                    <!-- /.nav-link -->
+                                </li>
+                                <!-- /.nav-item -->
+                                <li class="header-nav__item">
+                                    <a href="#" class="header-nav__link">Виды макетов</a>
+                                    <!-- /.nav-link -->
+                                </li>
+                                <!-- /.nav-item -->
+                                <li class="header-nav__item">
+                                    <a href="#" class="header-nav__link">Комплектация макетов</a>
+                                    <!-- /.nav-link -->
+                                </li>
+                                <!-- /.nav-item -->
+                                <li class="header-nav__item">
+                                    <a href="#" class="header-nav__link">Реализованные проекты</a>
+                                    <!-- /.nav-link -->
+                                </li>
+                                <!-- /.nav-item -->
+                                <li class="header-nav__item">
+                                    <a href="#" class="header-nav__link">Наши клиенты</a>
+                                    <!-- /.nav-link -->
+                                </li>
+                                <!-- /.nav-item -->
+                                <li class="header-nav__item">
+                                    <a href="#" class="header-nav__link">Контакты</a>
+                                    <!-- /.nav-link -->
+                                </li>
+                                <!-- /.nav-item -->
+                            </ul>
+                            <!-- /.nav-list -->
                         </nav>
                         <!-- /.header-menu -->
-                        <div class="header-contact"></div>
+                        <div class="header-contact">
+                            <a href="tel:8 800 891-33-33" class="header-contact__phone">8 800 891-33-33</a>
+                            <button class="button header-contact__callback">Заказать обратный звонок</button>
+                        </div>
                         <!-- /.header-contact -->
                     </div>
                     <!-- /.header-block -->
