--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                         <!-- /.header-menu -->
                         <div class="header-contact">
                             <a href="tel:8 800 891-33-33" class="header-contact__phone">8 800 891-33-33</a>
-                            <button class="button header-contact__callback">Заказать обратный звонок</button>
+                            <button class="button-callback header-contact__callback">Заказать обратный звонок</button>
                         </div>
                         <!-- /.header-contact -->
                     </div>
