--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -16,32 +16,32 @@
                         <nav class="header-navbar">
                             <ul class="header-nav">
                                 <li class="header-nav__item">
-                                    <a href="#" class="header-nav__link">Главная</a>
+                                    <a href="#main" class="header-nav__link">Главная</a>
                                     <!-- /.nav-link -->
                                 </li>
                                 <!-- /.nav-item -->
                                 <li class="header-nav__item">
-                                    <a href="#" class="header-nav__link">Виды макетов</a>
+                                    <a href="#type" class="header-nav__link">Виды макетов</a>
                                     <!-- /.nav-link -->
                                 </li>
                                 <!-- /.nav-item -->
                                 <li class="header-nav__item">
-                                    <a href="#" class="header-nav__link">Комплектация макетов</a>
+                                    <a href="#equipment" class="header-nav__link">Комплектация макетов</a>
                                     <!-- /.nav-link -->
                                 </li>
                                 <!-- /.nav-item -->
                                 <li class="header-nav__item">
-                                    <a href="#" class="header-nav__link">Реализованные проекты</a>
+                                    <a href="#completed" class="header-nav__link">Реализованные проекты</a>
                                     <!-- /.nav-link -->
                                 </li>
                                 <!-- /.nav-item -->
                                 <li class="header-nav__item">
-                                    <a href="#" class="header-nav__link">Наши клиенты</a>
+                                    <a href="#clients" class="header-nav__link">Наши клиенты</a>
                                     <!-- /.nav-link -->
                                 </li>
                                 <!-- /.nav-item -->
                                 <li class="header-nav__item">
-                                    <a href="#" class="header-nav__link">Контакты</a>
+                                    <a href="#contacts" class="header-nav__link">Контакты</a>
                                     <!-- /.nav-link -->
                                 </li>
                                 <!-- /.nav-item -->
@@ -60,6 +60,11 @@
                 <!-- /.container -->
             </header>
             <!-- /.header -->
+            <section class="offer">
+                <div class="container"></div>
+                <!-- /.container -->
+            </section>
+            <!-- /.offer -->
         </main>
     </div>
     <!-- /.wrapper -->
