--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,14 @@
                 <div class="container">
                     <div class="header-block">
                         <nav class="header-navbar">
+                            <div class="burger">
+                                <div class="burger-block">
+                                    <div class="burger-block__top"></div>
+                                    <div class="burger-block__center"></div>
+                                    <div class="burger-block__bottom"></div>
+                                </div>
+                                <span class="burger-text">МЕНЮ</span>
+                            </div>
                             <ul class="header-nav">
                                 <li class="header-nav__item">
                                     <a href="#main" class="header-nav__link">Главная</a>
