--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                                     <div class="burger-block__center"></div>
                                     <div class="burger-block__bottom"></div>
                                 </div>
-                                <span class="burger-text">МЕНЮ</span>
+                                <span class="burger-text">меню</span>
                             </div>
                             <ul class="header-nav">
                                 <li class="header-nav__item">
