--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
                         </nav>
                         <!-- /.header-menu -->
                         <div class="header-contact">
-                            <a href="tel:8 800 891-33-33" class="header-contact__phone">8 800 891-33-33</a>
+                            <a href="tel:8800891-33-33" class="header-contact__phone">8 800 891-33-33</a>
                             <button class="button-callback header-contact__callback">Заказать обратный звонок</button>
                         </div>
                         <!-- /.header-contact -->
