--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -68,8 +68,10 @@
                 <!-- /.container -->
             </header>
             <!-- /.header -->
-            <section class="offer">
-                <div class="container"></div>
+            <section class="section-main main" id="main">
+                <div class="container">
+
+                </div>
                 <!-- /.container -->
             </section>
             <!-- /.offer -->
