--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,49 @@
             <!-- /.header -->
             <section class="section-main main" id="main">
                 <div class="container">
-
+                    <div class="main-block">
+                        <div class="main-text">
+                            <h1 class="main-text__title">Изготовление макетов любой сложности</h1>
+                            <!-- /.main-text__title -->
+                            <span class="main-text__subtitle">Продажи. Инвестиции. Имидж.</span>
+                            <!-- /.main-text__subtitle -->
+                            <ul class="main-list">
+                                <li class="main-list__item">
+                                    <div class="main-list__image"></div>
+                                    <!-- /.main-list__image -->
+                                    <span class="main-list__text"></span>
+                                    <!-- /.main-list__text -->
+                                </li>
+                                <!-- /.main-list__item -->
+                                <li class="main-list__item">
+                                    <div class="main-list__image"></div>
+                                    <!-- /.main-list__image -->
+                                    <span class="main-list__text"></span>
+                                    <!-- /.main-list__text -->
+                                </li>
+                                <!-- /.main-list__item -->
+                                <li class="main-list__item">
+                                    <div class="main-list__image"></div>
+                                    <!-- /.main-list__image -->
+                                    <span class="main-list__text"></span>
+                                    <!-- /.main-list__text -->
+                                </li>
+                                <!-- /.main-list__item -->
+                                <li class="main-list__item">
+                                    <div class="main-list__image"></div>
+                                    <!-- /.main-list__image -->
+                                    <span class="main-list__text"></span>
+                                    <!-- /.main-list__text -->
+                                </li>
+                                <!-- /.main-list__item -->
+                            </ul>
+                            <!-- /.main-list -->
+                        </div>
+                        <!-- /.main-text -->
+                        <div class="main-form"></div>
+                        <!-- /.main-form -->
+                    </div>
+                    <!-- /.main-block -->
                 </div>
                 <!-- /.container -->
             </section>
