Начал верстать секцию Main

--- a/src/index.html
+++ b/src/index.html
@@ -78,30 +78,38 @@
                             <!-- /.main-text__subtitle -->
                             <ul class="main-list">
                                 <li class="main-list__item">
-                                    <div class="main-list__image"></div>
+                                    <div class="main-list__image">
+                                        <img src="img/main/5.png" alt="5">
+                                    </div>
                                     <!-- /.main-list__image -->
-                                    <span class="main-list__text"></span>
+                                    <span class="main-list__text">Срок производства от 5 дней</span>
                                     <!-- /.main-list__text -->
                                 </li>
                                 <!-- /.main-list__item -->
                                 <li class="main-list__item">
-                                    <div class="main-list__image"></div>
+                                    <div class="main-list__image">
+                                        <img src="img/main/24.png" alt="24">
+                                    </div>
                                     <!-- /.main-list__image -->
-                                    <span class="main-list__text"></span>
+                                    <span class="main-list__text">Гарантия на макеты 24 месяца</span>
                                     <!-- /.main-list__text -->
                                 </li>
                                 <!-- /.main-list__item -->
                                 <li class="main-list__item">
-                                    <div class="main-list__image"></div>
+                                    <div class="main-list__image">
+                                        <img src="img/main/reload.png" alt="reload">
+                                    </div>
                                     <!-- /.main-list__image -->
-                                    <span class="main-list__text"></span>
+                                    <span class="main-list__text">Проектируем, изготавливаем, доставляем и устанавливаем</span>
                                     <!-- /.main-list__text -->
                                 </li>
                                 <!-- /.main-list__item -->
                                 <li class="main-list__item">
-                                    <div class="main-list__image"></div>
+                                    <div class="main-list__image">
+                                        <img src="img/main/map-location.png" alt="map-location">
+                                    </div>
                                     <!-- /.main-list__image -->
-                                    <span class="main-list__text"></span>
+                                    <span class="main-list__text">Застрахуем, доставим и установим</span>
                                     <!-- /.main-list__text -->
                                 </li>
                                 <!-- /.main-list__item -->
