--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
                                         <img src="img/main/5.png" alt="5">
                                     </div>
                                     <!-- /.main-list__image -->
-                                    <span class="main-list__text">Срок производства от 5 дней</span>
+                                    <span class="main-list__text">Срок производства<br> от 5 дней</span>
                                     <!-- /.main-list__text -->
                                 </li>
                                 <!-- /.main-list__item -->
@@ -91,7 +91,7 @@
                                         <img src="img/main/24.png" alt="24">
                                     </div>
                                     <!-- /.main-list__image -->
-                                    <span class="main-list__text">Гарантия на макеты 24 месяца</span>
+                                    <span class="main-list__text">Гарантия на макеты<br> 24 месяца</span>
                                     <!-- /.main-list__text -->
                                 </li>
                                 <!-- /.main-list__item -->
@@ -109,7 +109,7 @@
                                         <img src="img/main/map-location.png" alt="map-location">
                                     </div>
                                     <!-- /.main-list__image -->
-                                    <span class="main-list__text">Застрахуем, доставим и установим</span>
+                                    <span class="main-list__text">Застрахуем, доставим<br> и установим</span>
                                     <!-- /.main-list__text -->
                                 </li>
                                 <!-- /.main-list__item -->
@@ -117,7 +117,14 @@
                             <!-- /.main-list -->
                         </div>
                         <!-- /.main-text -->
-                        <div class="main-form"></div>
+                        <div class="main-form">
+                            <form action="#" class="form main__form" method="POST">
+                                <input type="text" class="input main__input">
+                                <input type="text" class="input main__input">
+                                <input type="text" class="input main__input">
+                                <button class="button button__form" type="submit"></button>
+                            </form>
+                        </div>
                         <!-- /.main-form -->
                     </div>
                     <!-- /.main-block -->
