--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -118,11 +118,12 @@
                         </div>
                         <!-- /.main-text -->
                         <div class="main-form">
+                            <h2 class="main-form__title">Оставьте заявку и получите расчет стоимость макета в течение <strong>30 минут</strong></h2>
                             <form action="#" class="form main__form" method="POST">
-                                <input type="text" class="input main__input">
-                                <input type="text" class="input main__input">
-                                <input type="text" class="input main__input">
-                                <button class="button button__form" type="submit"></button>
+                                <input type="text" name="uesr_name" class="input main__input" placeholder="Ваше имя">
+                                <input type="tel" name="uesr_phone" class="input main__input" placeholder="Контактный телефон">
+                                <input type="email" name="uesr_email" class="input main__input" placeholder="Электронная почта">
+                                <button class="button main__button" type="submit">Оставить заявку</button>
                             </form>
                         </div>
                         <!-- /.main-form -->
