--- a/src/index.html
+++ b/src/index.html
@@ -119,10 +119,16 @@
                         <!-- /.main-text -->
                         <div class="main-form">
                             <h2 class="main-form__title">Оставьте заявку и получите расчет стоимость макета в течение <strong>30 минут</strong></h2>
-                            <form action="#" class="form main__form" method="POST">
-                                <input type="text" name="uesr_name" class="input main__input" placeholder="Ваше имя">
-                                <input type="tel" name="uesr_phone" class="input main__input" placeholder="Контактный телефон">
-                                <input type="email" name="uesr_email" class="input main__input" placeholder="Электронная почта">
+                            <form action="#" class="form main__form" id="main-form" method="POST">
+                                <div class="main__form-block">
+                                    <input type="text" name="user_name" class="input main__input" placeholder="Ваше имя">
+                                </div>
+                                <div class="main__form-block">
+                                    <input type="tel" name="user_phone" class="input main__input" placeholder="Контактный телефон">
+                                </div>
+                                <div class="main__form-block">
+                                    <input type="email" name="user_email" class="input main__input" placeholder="Электронная почта">
+                                </div>
                                 <button class="button main__button" type="submit">Оставить заявку</button>
                             </form>
                         </div>
@@ -137,6 +143,7 @@
     </div>
     <!-- /.wrapper -->
     <script src="https://code.jquery.com/jquery.min.js"></script>
+    <!-- <script src="js/jquery.validate.min.js"></script> -->
     <script src="js/script.js"></script>
 </body>
 </html>
