--- a/src/index.html
+++ b/src/index.html
@@ -124,7 +124,7 @@
                                     <input type="text" name="user_name" class="input main__input" placeholder="Ваше имя">
                                 </div>
                                 <div class="main__form-block">
-                                    <input type="tel" name="user_phone" class="input main__input" placeholder="Контактный телефон">
+                                    <input type="tel" name="user_phone" class="input main__input phone" placeholder="Контактный телефон">
                                 </div>
                                 <div class="main__form-block">
                                     <input type="email" name="user_email" class="input main__input" placeholder="Электронная почта">
@@ -144,6 +144,7 @@
     <!-- /.wrapper -->
     <script src="https://code.jquery.com/jquery.min.js"></script>
     <!-- <script src="js/jquery.validate.min.js"></script> -->
+    <!-- <script src="js/jquery.maskedinput.min.js"></script> -->
     <script src="js/script.js"></script>
 </body>
 </html>
