--- a/src/index.html
+++ b/src/index.html
@@ -138,7 +138,14 @@
                 </div>
                 <!-- /.container -->
             </section>
-            <!-- /.offer -->
+            <!-- /.main -->
+            <section class="section-type type" id="type">
+                <div class="container">
+
+                </div>
+                <!-- /.container -->
+            </section>
+            <!-- /#type.type -->
         </main>
     </div>
     <!-- /.wrapper -->
