--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -141,7 +141,10 @@
             <!-- /.main -->
             <section class="section-type type" id="type">
                 <div class="container">
-
+                    <div class="type-block">
+                        <h1 class="section-title type__title">Виды макетов</h1>
+                        <span class="section-subtitle type__subtitle">Создаем макеты от небольших домов до космических станций</span>
+                    </div>
                 </div>
                 <!-- /.container -->
             </section>
