--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -141,10 +141,48 @@
             <!-- /.main -->
             <section class="section-type type" id="type">
                 <div class="container">
-                    <div class="type-block">
-                        <h1 class="section-title type__title">Виды макетов</h1>
-                        <span class="section-subtitle type__subtitle">Создаем макеты от небольших домов до космических станций</span>
+                    <h1 class="section-title type__title">Виды макетов</h1>
+                    <span class="section-subtitle type__subtitle">Создаем макеты от небольших домов до космических станций</span>
+                    <div class="layouts">
+                        <div class="layout">
+                            <h4 class="layout__title"></h4>
+                            <div class="layout__image">
+                                <img src="" alt="">
+                            </div>
+                            <ul class="layout-list">
+                                <li class="layout-list__item"></li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item"></li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item"></li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item"></li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item"></li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item"></li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item"></li>
+                                <!-- /.layout-list__item -->
+                            </ul>
+                            <!-- /.layout-list -->
+                            <div class="layout-modal">
+                                <a href="#" class="layout__link"></a>
+                            </div>
+                        </div>
+                        <!-- /.layout -->
+                        <div class="layout"></div>
+                        <!-- /.layout -->
+                        <div class="layout"></div>
+                        <!-- /.layout -->
+                        <div class="layout"></div>
+                        <!-- /.layout -->
+                        <div class="layout"></div>
+                        <!-- /.layout -->
+                        <div class="layout"></div>
+                        <!-- /.layout -->
                     </div>
+                    <!-- /.layouts -->
                 </div>
                 <!-- /.container -->
             </section>
