--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -145,41 +145,150 @@
                     <span class="section-subtitle type__subtitle">Создаем макеты от небольших домов до космических станций</span>
                     <div class="layouts">
                         <div class="layout">
-                            <h4 class="layout__title"></h4>
+                            <h4 class="layout__title">Архитектурные макеты</h4>
                             <div class="layout__image">
-                                <img src="" alt="">
+                                <img src="img/type/type1.jpg" alt="type1">
                             </div>
                             <ul class="layout-list">
-                                <li class="layout-list__item"></li>
+                                <li class="layout-list__item">Многоэтажные дома</li>
                                 <!-- /.layout-list__item -->
-                                <li class="layout-list__item"></li>
+                                <li class="layout-list__item">Жилые комплексы</li>
                                 <!-- /.layout-list__item -->
-                                <li class="layout-list__item"></li>
+                                <li class="layout-list__item">Коттеджные поселки</li>
                                 <!-- /.layout-list__item -->
-                                <li class="layout-list__item"></li>
+                                <li class="layout-list__item">Торговые комплексы</li>
                                 <!-- /.layout-list__item -->
-                                <li class="layout-list__item"></li>
+                                <li class="layout-list__item">Бизнес – парки</li>
                                 <!-- /.layout-list__item -->
-                                <li class="layout-list__item"></li>
+                                <li class="layout-list__item">Административные здания</li>
                                 <!-- /.layout-list__item -->
-                                <li class="layout-list__item"></li>
+                                <li class="layout-list__item">Гостиницы и санатории</li>
                                 <!-- /.layout-list__item -->
                             </ul>
                             <!-- /.layout-list -->
                             <div class="layout-modal">
-                                <a href="#" class="layout__link"></a>
+                                <a href="#" class="layout__link">Рассчитать стоимость</a>
                             </div>
                         </div>
                         <!-- /.layout -->
-                        <div class="layout"></div>
+                        <div class="layout">
+                            <h4 class="layout__title">Градостроительные макеты</h4>
+                            <div class="layout__image">
+                                <img src="img/type/type2.jpg" alt="type2">
+                            </div>
+                            <ul class="layout-list">
+                                <li class="layout-list__item">Области</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Города</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Районы</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Микрорайоны</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Территории</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Мосты и тоннели</li>
+                                <!-- /.layout-list__item -->
+                            </ul>
+                            <!-- /.layout-list -->
+                            <div class="layout-modal">
+                                <a href="#" class="layout__link">Рассчитать стоимость</a>
+                            </div>
+                        </div>
                         <!-- /.layout -->
-                        <div class="layout"></div>
+                        <div class="layout">
+                            <h4 class="layout__title">Промышленные макеты</h4>
+                            <div class="layout__image">
+                                <img src="img/type/type3.jpg" alt="type3">
+                            </div>
+                            <ul class="layout-list">
+                                <li class="layout-list__item">Предприятия и фабрики</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Энергетические объекты</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Заводы</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Научные центры</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Трубопроводы</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Производственные линии</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Технологические линии</li>
+                                <!-- /.layout-list__item -->
+                            </ul>
+                            <!-- /.layout-list -->
+                            <div class="layout-modal">
+                                <a href="#" class="layout__link">Рассчитать стоимость</a>
+                            </div>
+                        </div>
                         <!-- /.layout -->
-                        <div class="layout"></div>
+                        <div class="layout">
+                            <h4 class="layout__title">Интерьерные макеты</h4>
+                            <div class="layout__image">
+                                <img src="img/type/type4.jpg" alt="type4">
+                            </div>
+                            <ul class="layout-list">
+                                <li class="layout-list__item">Квартиры</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Офисы</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Коттеджи</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Магазины</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Торговые центры</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Спортивные комплексы</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Заводы</li>
+                                <!-- /.layout-list__item -->
+                            </ul>
+                            <!-- /.layout-list -->
+                            <div class="layout-modal">
+                                <a href="#" class="layout__link">Рассчитать стоимость</a>
+                            </div>
+                        </div>
                         <!-- /.layout -->
-                        <div class="layout"></div>
+                        <div class="layout">
+                            <h4 class="layout__title">Ландшафтные макеты</h4>
+                            <div class="layout__image">
+                                <img src="img/type/type5.jpg" alt="type5">
+                            </div>
+                            <ul class="layout-list">
+                                <li class="layout-list__item">Парки</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Сады</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Горы</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Озера</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Рельефы местности</li>
+                                <!-- /.layout-list__item -->
+                                <li class="layout-list__item">Участки</li>
+                                <!-- /.layout-list__item -->
+                            </ul>
+                            <!-- /.layout-list -->
+                            <div class="layout-modal">
+                                <a href="#" class="layout__link">Рассчитать стоимость</a>
+                            </div>
+                        </div>
                         <!-- /.layout -->
-                        <div class="layout"></div>
+                        <div class="layout">
+                            <h4 class="layout__title">Индивидуальные макеты</h4>
+                            <div class="layout__image">
+                                <img src="img/type/type6.jpg" alt="type6">
+                            </div>
+                            <ul class="layout-list">
+                                <li class="layout-list__item">Мы может воплотить в жизнь любые идеи, с применением высоких технологий, максимальной детализацией и совершенно любых размеров</li>
+                                <!-- /.layout-list__item -->
+                            </ul>
+                            <!-- /.layout-list -->
+                            <div class="layout-modal">
+                                <a href="#" class="layout__link">Рассчитать стоимость</a>
+                            </div>
+                        </div>
                         <!-- /.layout -->
                     </div>
                     <!-- /.layouts -->
