--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -167,7 +167,7 @@
                             </ul>
                             <!-- /.layout-list -->
                             <div class="layout-modal">
-                                <a href="#" class="layout__link">Рассчитать стоимость</a>
+                                <a href="#" class="layout-modal__link">Рассчитать стоимость</a>
                             </div>
                         </div>
                         <!-- /.layout -->
@@ -192,7 +192,7 @@
                             </ul>
                             <!-- /.layout-list -->
                             <div class="layout-modal">
-                                <a href="#" class="layout__link">Рассчитать стоимость</a>
+                                <a href="#" class="layout-modal__link">Рассчитать стоимость</a>
                             </div>
                         </div>
                         <!-- /.layout -->
@@ -219,7 +219,7 @@
                             </ul>
                             <!-- /.layout-list -->
                             <div class="layout-modal">
-                                <a href="#" class="layout__link">Рассчитать стоимость</a>
+                                <a href="#" class="layout-modal__link">Рассчитать стоимость</a>
                             </div>
                         </div>
                         <!-- /.layout -->
@@ -246,7 +246,7 @@
                             </ul>
                             <!-- /.layout-list -->
                             <div class="layout-modal">
-                                <a href="#" class="layout__link">Рассчитать стоимость</a>
+                                <a href="#" class="layout-modal__link">Рассчитать стоимость</a>
                             </div>
                         </div>
                         <!-- /.layout -->
@@ -271,7 +271,7 @@
                             </ul>
                             <!-- /.layout-list -->
                             <div class="layout-modal">
-                                <a href="#" class="layout__link">Рассчитать стоимость</a>
+                                <a href="#" class="layout-modal__link">Рассчитать стоимость</a>
                             </div>
                         </div>
                         <!-- /.layout -->
@@ -286,7 +286,7 @@
                             </ul>
                             <!-- /.layout-list -->
                             <div class="layout-modal">
-                                <a href="#" class="layout__link">Рассчитать стоимость</a>
+                                <a href="#" class="layout-modal__link">Рассчитать стоимость</a>
                             </div>
                         </div>
                         <!-- /.layout -->
