--- Auto-Git Commit ---

--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,7 @@
                     <h1 class="section-title type__title">Виды макетов</h1>
                     <span class="section-subtitle type__subtitle">Создаем макеты от небольших домов до космических станций</span>
                     <div class="layouts">
-                        <div class="layout wow fadeUp">
+                        <div class="layout wow fadeInUp" data-wow-delay="1s">
                             <h4 class="layout__title">Архитектурные макеты</h4>
                             <div class="layout__image">
                                 <img src="img/type/type1.jpg" alt="type1">
@@ -171,7 +171,7 @@
                             </div>
                         </div>
                         <!-- /.layout -->
-                        <div class="layout wow fadeUp">
+                        <div class="layout wow fadeInUp" data-wow-delay="1s">
                             <h4 class="layout__title">Градостроительные макеты</h4>
                             <div class="layout__image">
                                 <img src="img/type/type2.jpg" alt="type2">
@@ -196,7 +196,7 @@
                             </div>
                         </div>
                         <!-- /.layout -->
-                        <div class="layout wow fadeUp">
+                        <div class="layout wow fadeInUp" data-wow-delay="1s">
                             <h4 class="layout__title">Промышленные макеты</h4>
                             <div class="layout__image">
                                 <img src="img/type/type3.jpg" alt="type3">
@@ -223,7 +223,7 @@
                             </div>
                         </div>
                         <!-- /.layout -->
-                        <div class="layout wow fadeUp">
+                        <div class="layout wow fadeInUp" data-wow-delay="1s">
                             <h4 class="layout__title">Интерьерные макеты</h4>
                             <div class="layout__image">
                                 <img src="img/type/type4.jpg" alt="type4">
@@ -250,7 +250,7 @@
                             </div>
                         </div>
                         <!-- /.layout -->
-                        <div class="layout wow fadeUp">
+                        <div class="layout wow fadeInUp" data-wow-delay="1s">
                             <h4 class="layout__title">Ландшафтные макеты</h4>
                             <div class="layout__image">
                                 <img src="img/type/type5.jpg" alt="type5">
@@ -275,7 +275,7 @@
                             </div>
                         </div>
                         <!-- /.layout -->
-                        <div class="layout wow fadeUp">
+                        <div class="layout wow fadeInUp" data-wow-delay="1s">
                             <h4 class="layout__title">Индивидуальные макеты</h4>
                             <div class="layout__image">
                                 <img src="img/type/type6.jpg" alt="type6">
